# Locallibrary

./: pyproject.toml
locallibrary/: settings.py  urls.py
